fixed resizing on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ body {
 }
 
 #particles-js {
-  height: 100%;
+  height: 50%;
   position: absolute;
   z-index: 1;
 }
@@ -57,5 +57,9 @@ body {
       "hero hero"
       "sidebar content"
       "footer footer"
+  }
+
+  #particles-js {
+    height: 100%
   }
 }
